2013-06-09: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWAdaptors/Apache/mod_gsweb.c
	* GSWAdaptors/common/GNUmakefile
	* GSWAdaptors/common/GSWConfig.[h|c]
	* GSWAdaptors/common/GSWLock.h
	* GSWAdaptors/common/GSWStats.c
	* GSWAdaptors/common/GSWUtil.[h|c]
	* GSWAdaptors/common/config.h
	  remove #ifdefs of Netscape, Apache and Apache2, only
	  leave parts of Apache
	* GSWAdaptors/Apache/GNUmakefile.in
	* GSWAdaptors/Apache/mod_gsweb.c
	  do not reference the common directory anymore
	* move files needed by the Apache adaptor from
	  common into the Apache directory
	* remove GSWAdaptors/common and remaining stuff in there
	* GSWeb/GSWUtils.m
	  do not use deprecated method, replace as suggested by warning
	* GSWeb/GSWApplication+Defaults.m
	* GSWeb/GSWApplication.h
	  make the defaultUndoStackLimit NSUInteger

2013-06-06: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWAdaptors/common/GSWAppConnectSocket.c
	* GSWAdaptors/common/GSWUtil.c
	  make the old Apache Adaptor work on OpenBSD
	* GSWAdaptors/Apache/mod_gsweb.c
	* GSWAdaptors/Apache/GNUmakefile-Apache[1|2]x
	  remove all #ifdef Apache2, and remove old GNUmakefiles
	* GSWAdaptors/README.txt
	  note about Apache adaptor to work with OpenBSD Apache
	  delete GSWAdaptors/netscape
	
2013-06-02: David Wetzel <dave@turbocat.de>
	* GSWeb/GSWMessage.m
	  Remove warning
	* README
	  Change maintainer

2013-05-31: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/GSWMessage.[h|]
	  get rid of bogus #ifndef NO_GNUSTEP
	* GSWeb/GSWHTTPIO.m
	  use the file handle in non-blocking mode in GNUstep
	  environment, uses a private GSFileHandle class
	* GSWeb/GSWApplication.[h|m]
	* GSWeb/GSWComponentRequestHandler.m
	  make _globalLock a NSRecursiveLock to fix problem
	  I introduced with SVN rev 36250, fixes bug 39092
	* GSWeb/GSWMultiKeyDictionary.m
	  Explicitly create a NSMutableDicitonary, see bug
	  39088
	* GSWeb/GSWProcFS.m
	  fix a format string
	* GSWDatabase/WODisplayGroup.m